frontend/public/stylesheets/style.styl
@import "bootstrap.min.css"
@import "bootstrap-theme.css"

body
    padding: 50px
    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif

a
    color: #00B7FF

dt
    font-weight: normal

#modules
    section
        position: relative
        dl
            margin-top: 0
        .panel
            .panel-body
                word-break: break-all
        .big-label
            vertical-align: bottom
            line-height: 30px
        .big
            margin-bottom: 10px
            font-size: 30px
            line-height: 30px
        footer
            position: absolute
            right: 15px
            bottom: 15px
            font-size: 10px
    .miner
        h4
            margin-left: 40px
        .devices
            margin-bottom: 20px
            dl
                margin: 0

